--- a/src/app/components/admin/admin-main-page/admin-main-page.component.html
+++ b/src/app/components/admin/admin-main-page/admin-main-page.component.html
@@ -30,7 +30,7 @@
       <img src="assets/admin/admin-third.svg" class="item-img first" alt="third">
       <p>Активные банеры</p>
       <h5>Посмотреть все банеры, которые отображаются на главной странице</h5>
-      <button class="direct-btn" type="button">
+      <button class="direct-btn" type="button" routerLink="/admin/banners">
         <span>Перейти</span>
         <img src="assets/admin/arrow.svg" alt="arrow">
       </button>
