--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.css
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.css
@@ -41,8 +41,6 @@
 
   .coworking-rating {
     font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
     font-size: 1.25vw;
     margin-top: 33px;
     margin-right: 0.625vw;
@@ -81,12 +79,14 @@
     gap: 1.5104vw;
     font-size: 1.04vw;
     margin-bottom: 28px;
+    align-items: center;
   }
 
   .coworking-time-container {
     display: flex;
     gap: 1.35417vw;
     font-size: 1.0417vw;
+    align-items: center;
   }
 
   .coworking-content {
@@ -143,7 +143,6 @@
 
 @media screen and (max-width: 1450px) {
   .coworking {
-    width: calc(0.75*1120px);
     height: calc(0.83*571px);
     margin-bottom: calc(0.83*37px);
   }
@@ -153,10 +152,7 @@
   }
 
   .coworking-title {
-    font-size: calc(0.75*28px);
     margin-top: calc(0.83*26px);
-    margin-left: calc(0.75*54px);
-    margin-right: calc(0.75*16px);
   }
 
   .img-good-place {
@@ -165,14 +161,8 @@
     height: calc(0.75*22px);
   }
 
-  .coworking-rating-container {
-    margin-right: calc(0.75*64px);
-  }
-
   .coworking-rating {
-    font-size: calc(0.75*24px);
     margin-top: calc(0.83*33px);
-    margin-right: calc(0.75*12px);
   }
 
   .img-star {
@@ -182,32 +172,16 @@
   }
 
   .coworking-image img {
-    margin-left: calc(0.75*54px);
-    margin-right: calc(0.75*51px);
-    width: calc(0.75*480px);
     height: calc(0.83*415px);
   }
 
   .coworking-description {
-    width: calc(0.75*460px);
-    font-size: calc(0.75*24px);
     line-height: calc(0.83*177.69%);
     margin-bottom: calc(0.83*42px);
   }
 
   .coworking-adress-container {
-    gap: calc(0.75*29px);
-    font-size: calc(0.75*20px);
     margin-bottom: calc(0.83*28px);
-  }
-
-  .coworking-time-container {
-    gap: calc(0.75*26px);
-    font-size: calc(0.75*20px);
-  }
-
-  .coworking-map-and-favorite-container {
-    gap: calc(0.75*54px);
   }
 
   .btn-like {
@@ -216,12 +190,10 @@
   }
 
   .coworking-map {
-    width: calc(0.75*275px);
     height: calc(0.83*54px);
   }
 
   .coworking-map p {
-    font-size: calc(0.75*15px);
     line-height: calc(0.83*28px);
   }
 
