страница для выдачи главным админом роли и исправления кода

--- a/src/app/components/admin/requests-to-app/app-request/app-request.component.html
+++ b/src/app/components/admin/requests-to-app/app-request/app-request.component.html
@@ -8,7 +8,7 @@
 
 <div class="content-container" *ngIf="ad">
   <h1>Рассмотрение заявки на продвижение места</h1>
-  <h2>Дата получения заявки: {{ad.date_from| date: 'dd.MM.yyyy' }}</h2>
+  <h2>Дата начала показа рекламы: {{ad.date_from| date: 'dd.MM.yyyy' }}</h2>
 
   <div class="application-container">
     <div class="content">
