--- a/src/app/components/main-webpage/coworking-item/coworking-item.component.css
+++ b/src/app/components/main-webpage/coworking-item/coworking-item.component.css
@@ -69,6 +69,7 @@
 
   .img-good-place {
     margin-right: 27px;
+    margin-top: 2px;
     width: 22px;
     height: 22px;
   }
@@ -454,6 +455,7 @@
     margin-right: calc(0.75*27px);
     width: calc(0.75*22px);
     height: calc(0.75*22px);
+    margin-top: calc(0.83*2px);
   }
 
   .img-star {
@@ -735,6 +737,7 @@
     margin-right: calc(0.71*27px);
     width: calc(0.71*22px);
     height: calc(0.71*22px);
+    margin-top: calc(0.71*2px);
   }
 
   .img-star {
